--- a/hotel.html
+++ b/hotel.html
@@ -93,7 +93,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/venetianmacao.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.venetianmacao.com/">
+                        <div class="together"> <a href="https://www.venetianmacao.com/" target="_blank">
                                 <h3>The Venetian Macao
                                 </h3>
                                 <ul>
@@ -104,14 +104,14 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.venetianmacao.com/" class="button_main">Buy Tickets</a>
+                            <a href="https://www.venetianmacao.com/" class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/dreams.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.cityofdreamsmanila.com/en">
+                        <div class="together"> <a href="https://www.cityofdreamsmanila.com/en" target="_blank">
                                 <h3>City of Dreams</h3>
                                 <ul>
                                     <li>Integrated resort with a casino</li>
@@ -121,14 +121,14 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.cityofdreamsmanila.com/en" class="button_main">Buy Tickets</a>
+                            <a href="https://www.cityofdreamsmanila.com/en" class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/wynn.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-palace">
+                        <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-palace" target="_blank">
                                 <h3>Wynn Palace</h3>
                                 <ul>
                                     <li>Luxury resort and casino</li>
@@ -137,7 +137,7 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wynnresortsmacau.com/en/wynn-palace" class="button_main">Buy
+                            <a href="https://www.wynnresortsmacau.com/en/wynn-palace" class="button_main" target="_blank">Buy
                                 Tickets</a>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/wynnmacao.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-macau">
+                        <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-macau" target="_blank">
                                 <h3>Wynn Macau</h3>
                                 <ul>
                                     <li>High-end casino resort</li>
@@ -154,14 +154,14 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wynnresortsmacau.com/en/wynn-macau" class="button_main">Buy Tickets</a>
+                            <a href="https://www.wynnresortsmacau.com/en/wynn-macau" class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/cotai.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.mgm.mo/en/cotai">
+                        <div class="together"> <a href="https://www.mgm.mo/en/cotai" target="_blank">
                                 <h3>MGM Cotai</h3>
                                 <ul>
                                     <li>Modern resort with a casino</li>
@@ -170,14 +170,14 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.mgm.mo/en/cotai" class="button_main">Buy Tickets</a>
+                            <a href="https://www.mgm.mo/en/cotai" class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/mgmmacao.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.mgm.mo/">
+                        <div class="together"> <a href="https://www.mgm.mo/" target="_blank">
                                 <h3>MGM Macau
                                 </h3>
                                 <ul>
@@ -188,14 +188,14 @@
                             </a>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.mgm.mo/" class="button_main">Buy Tickets</a>
+                            <a href="https://www.mgm.mo/" class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/lisoba.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.grandlisboa.com/en">
+                        <div class="together"> <a href="https://www.grandlisboa.com/en" target="_blank">
                                 <h3>Grand Lisboa</h3>
                                 <ul>
                                     <li>Iconic casino hotel</li>
@@ -205,14 +205,14 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.grandlisboa.com/en" class="button_main">Buy Tickets</a>
+                            <a href="https://www.grandlisboa.com/en" class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/fourseasons.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.fourseasons.com/macau/">
+                        <div class="together"> <a href="https://www.fourseasons.com/macau/" target="_blank">
                                 <h3>Four Seasons Hotel Macau, Cotai Strip
                                 </h3>
                                 <ul>
@@ -224,14 +224,14 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.fourseasons.com/macau/" class="button_main">Buy Tickets</a>
+                            <a href="https://www.fourseasons.com/macau/" class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/parisian.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.parisianmacao.com/">
+                        <div class="together"> <a href="https://www.parisianmacao.com/" target="_blank">
                                 <h3>The Parisian Macao</h3>
                                 <ul>
                                     <li>Resort with a replica Eiffel Tower</li>
@@ -242,7 +242,7 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.parisianmacao.com/" class="button_main">Buy Tickets</a>
+                            <a href="https://www.parisianmacao.com/" class="button_main" target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
